Fixed incorrect duration and made support for fullscreen mode on safari.

--- a/app/assets/app.css
+++ b/app/assets/app.css
@@ -234,6 +234,30 @@ span.name {
 .wbc-event-bar[event-duration='6'] {
 	width: 30%;
 }
+.wbc-event-bar[event-duration='7'] {
+	width: 35%;
+}
+.wbc-event-bar[event-duration='8'] {
+	width: 40%;
+}
+.wbc-event-bar[event-duration='9'] {
+	width: 45%;
+}
+.wbc-event-bar[event-duration='10'] {
+	width: 50%;
+}
+.wbc-event-bar[event-duration='11'] {
+	width: 65%;
+}
+.wbc-event-bar[event-duration='12'] {
+	width: 70%;
+}
+.wbc-event-bar[event-duration='13'] {
+	width: 75%;
+}
+.wbc-event-bar[event-duration='14'] {
+	width: 80%;
+}
 
 .wbc-event-bar[event-format="Demo"] {
 	background-color: rgb(152, 209, 143);
